--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ android {
     }
 
     task ndkBuildRelease(type: Exec) {
-      commandLine "$System.env.ANDROID_NDK/ndk-build",
+      commandLine 'ndk-build',
         '-C', file('.').absolutePath,
        'NDK_APPLICATION_MK=${PWD}/native/Application.mk',
        'NDK_MODULE_PATH=${PWD}/native:${PWD}/first-party/fbjni/native:${PWD}/third-party',
