--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,6 @@ buildscript {
 }
 
 apply plugin: 'com.android.library'
-apply plugin: 'maven-publish'
 
 android {
     repositories {
@@ -74,6 +73,7 @@ if (!project.hasProperty('sonatypeRepo') ||
 
 apply plugin: 'maven'
 apply plugin: 'signing'
+apply plugin: 'maven-publish'
 
 version = "2.0.4"
 group = "com.facebook.conceal"
@@ -119,6 +119,16 @@ uploadArchives {
                     email 'mani.subodh@gmail.com'
                 }
             }
+        }
+    }
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            groupId = 'com.facebook.conceal'
+            artifactId = 'conceal'
+            version = '2.0.4'
         }
     }
 }
