--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     repositories {
         mavenCentral()
         google()
+        maven { url "https://jitpack.io" }
     }
 
     dependencies {
@@ -16,7 +17,7 @@ android {
       mavenCentral()
       google()
       jcenter()
-
+      maven { url "https://jitpack.io" }
     }
 
     dependencies {
